Fix window/linux tracks list width by using overlay scrollbars

--- a/src/renderer/components/TracksList/TracksList.module.css
+++ b/src/renderer/components/TracksList/TracksList.module.css
@@ -8,7 +8,7 @@
 }
 
 .tracksListScroller {
-  overflow: auto;
+  overflow-y: overlay;
   flex: 1 1 auto;
 }
 
